--- a/Theater-1.html
+++ b/Theater-1.html
@@ -69,14 +69,14 @@
     <footer><!-- 푸터 -->
       <div class="footer_in">
         <div class="f_logo">
-          <img src="image/F_logo.png">
+          <img src="image/F_logo.png" alt="">
         </div>
-        <address>
+        <div class="address">
           대표이사 : 김창희 | 사업자등록번호 : 416-85-31253<br>
           주소 : 경기도 파주시 탑삭골길 260 퍼스트가든(상지석동 1021-3)<br>
           주차장: 경기도 고양시 일산동구 탑삭골길 273-9(설문동 668)<br> 
           irstgarden@firstgarden.co.kr | 예약문의 : gaudium@firstgarden.co.kr
-        </address>
+        </div>
       </div>
     </footer>
 
