--- a/firstgarden.html
+++ b/firstgarden.html
@@ -11,12 +11,14 @@
 
 <body>
   <div id="wrap">
-    <header><!-- 헤더 -->
+    <header>
+      <!-- 헤더 -->
       <div class="nav clear">
-        <div class="logo"> <!-- 로고 -->
+        <div class="logo">
+          <!-- 로고 -->
           <a href="index.html"><img src="image/logo.png" alt="logo"></a>
         </div>
-          <div class="menu_toggle_btn indent"><span>전체 메뉴 토글 버튼</span></div>
+        <div class="menu_toggle_btn indent"><span>전체 메뉴 토글 버튼</span></div>
       </div>
 
 
@@ -31,29 +33,65 @@
           <li><a href="map.html">오시는 길</a></li>
         </ul>
       </nav>
-  </header>
+    </header>
 
-  <section>
-    <div class="section_intro">
-      <h1>컨셉정원 퍼스트가든</h1>
-      <p>퍼스트가든은 2017년 4월 오픈한 약 20,000평 규모의 대규모 복합 문화 시설입니다.
-        23가지 테마가 있는 아도니스 정원 속 레스토랑, 웨딩홀, 놀이시설 등 다양한 편의 시설을 갖추고 있습니다.
-        퍼스트가든에서 가족, 연인, 친구와 함께 특별한 이야기를 만들어보세요.</p>
+    <section>
+      <div class="section_intro">
+        <h1>정원소개</h1>
+        <img src="image/intro1.jpg" alt="">
+        <h2>컨셉정원 퍼스트가든</h2>
+        <p>퍼스트가든은 2017년 4월 오픈한 약 20,000평 규모의 대규모 복합 문화 시설입니다.
+          23가지 테마가 있는 아도니스 정원 속 레스토랑, 웨딩홀, 놀이시설 등 다양한 편의 시설을 갖추고 있습니다.
+          퍼스트가든에서 가족, 연인, 친구와 함께 특별한 이야기를 만들어보세요.</p>
+        <h3>놀이시설</h3>
+        <div class="rides">
+          <img src="image/rides1.jpg" alt="">
+          <img src="image/rides2.jpg" alt="">
+        </div>
+        <p>
+          퍼스트가든의 놀이시설 아이노리는 아이들의 웃음이 떠나지 않는 공간, 항상 즐거운 놀이가 있는 공간을 꿈꿉니다.
+          정원을 둘러보며 관람할 수 있는 꼬마열차, 회전목마, 범퍼카 등 신나는 가든 놀이터로 꾸며져있습니다.
+        </p>
+
+        <h3>동물농장</h3>
+        <div class="animal">
+          <img src="image/animal1.jpg" alt="">
+          <img src="image/animal2.jpg" alt="">
+          <p>
+            퍼스트가든의 동물농장에는 포유류, 파충류, 조류, 어류 등 다양한 동물들이 있습니다.
+            각각 특성에 맞는 방법으로 먹이주기 체험을 하실 수 있으며, 볼거리가 아닌 가까이서 동물들과 교감을 나눌 수 있게 준비되어 있습니다.
+          </p>
+
+        </div>
+
+
+        <h3>기프트샵</h3>
+        <div class="gift">
+          <div class="gift1"><img src="image/gift.gif" alt=""></div>
+          <div class="gift2"><img src="image/giftshop.jpg" alt=""></div>
+          <p>
+            메종드본은 프랑스어로 좋은 집을 의미하며, 좋은 품질의 제품과 서비스로 고객에게 만족을 드리는 기프트샵입니다.
+            메종드본에서는 여러분께 일상 속에서 유쾌하고 소소한 재미를 주는 다양한 스타일의 제품을 제시합니다.
+            또한 실용적이며 가치 있는 컨텐츠를 제공하여 유니크한 라이프스타일을 제안합니다.
+          </p>
+        </div>
       </div>
-  </section>
-   
 
-    <footer><!-- 푸터 -->
+    </section>
+
+
+    <footer>
+      <!-- 푸터 -->
       <div class="footer_in">
         <div class="f_logo">
-          <img src="image/F_logo.png">
+          <img src="image/F_logo.png" alt="">
         </div>
-        <address>
+        <div class="address">
           대표이사 : 김창희 | 사업자등록번호 : 416-85-31253<br>
           주소 : 경기도 파주시 탑삭골길 260 퍼스트가든(상지석동 1021-3)<br>
-          주차장: 경기도 고양시 일산동구 탑삭골길 273-9(설문동 668)<br> 
+          주차장: 경기도 고양시 일산동구 탑삭골길 273-9(설문동 668)<br>
           irstgarden@firstgarden.co.kr | 예약문의 : gaudium@firstgarden.co.kr
-        </address>
+        </div>
       </div>
     </footer>
 
