--- a/Theater.html
+++ b/Theater.html
@@ -40,9 +40,9 @@
     <section>
       <div class="section_theater">
         <h1>자동차 극장</h1>
-        <p>퍼스트가든 자동차극장은 2019년 12월에 문을 열어 깔끔한 주변<br> 시설과 함께 쾌적환 영화감상을 위한 5.1채널 돌비 스테레오를 지원하는<br> 20,000 ANSI 급의 고화질 디지털 영사기를 보유하고 있으며 <br>특히, 야외에서 관람해야하는 영화관 특성에 맞추어 특수 고반사 도료로<br> 스크린을 만들어 더욱더 깨끗한 화면과 현장감있는 음질을 즐길 수 있습니다.</p>
+        <p>퍼스트가든 자동차극장은 2019년 12월에 문을 열어 <br>깔끔한 주변 시설과 함께 쾌적환 영화감상을 위한 5.1채널 돌비 <br>스테레오를 지원하는 20,000 ANSI 급의 고화질 디지털 영사기를 <br>보유하고 있으며 특히, 야외에서 관람해야하는 영화관 특성에 맞추어 특수 고반사 도료로스크린을 만들어 더욱더 깨끗한 화면과<br> 현장감있는 음질을 즐길 수 있습니다.</p>
 
-        <table border="1">
+        <table>
           <tr>
             <th>구분</th><th>1회</th><th>2회</th><th>금액</th><th>비고</th>
           </tr>
@@ -74,29 +74,20 @@
               <span>1부 20:00</span><br>
               <img src="image/movietime1.jpg" alt="movie1"><br>
               <span class="title">닥터 스트레인지:<br>대혼돈의 멀티버스<br>(126분)</span><br>
-              <input type="button" value="자세히보기">
             </a>
+            <a href="Theater-1.html"><input type="button" value="자세히보기"></a>
           </div>
           <div class="movie2">
             <a href="Theater-2.html">
               <span>2부 22:25</span><br>
               <img src="image/movietime2.jpg" alt="movie1"><br>
               <span class="title">범죄도시2 (106분)</span><br>
-              <input type="button" value="자세히보기">
             </a>
+            <a href="Theater-2.html"><input type="button" value="자세히보기"></a>
           </div>
         </div>
 
         <div class="detail">상영시간은 당일 상황에 따라 변동될 수 있습니다.</div>
-
-
-
-
-
-
-
-
-
 
 
       </div>
@@ -105,14 +96,14 @@
     <footer><!-- 푸터 -->
       <div class="footer_in">
         <div class="f_logo">
-          <img src="image/F_logo.png">
+          <img src="image/F_logo.png" alt="">
         </div>
-        <address>
+        <div class="address">
           대표이사 : 김창희 | 사업자등록번호 : 416-85-31253<br>
           주소 : 경기도 파주시 탑삭골길 260 퍼스트가든(상지석동 1021-3)<br>
           주차장: 경기도 고양시 일산동구 탑삭골길 273-9(설문동 668)<br> 
           irstgarden@firstgarden.co.kr | 예약문의 : gaudium@firstgarden.co.kr
-        </address>
+        </div>
       </div>
     </footer>
 
