--- a/Theater-1.html
+++ b/Theater-1.html
@@ -42,7 +42,7 @@
         <img src="image/movietime1.jpg" alt="theater1"><br>
           <div class="text">
             <p>상영작 [1부] / 상영시간 | 평일 20:00 / 주말 20:00</p>
-            <p>닥터 스트레인지: 대혼돈의 멀티버스 (126분) <br><a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=182016"><span>[영화정보]</span></a></p>
+            <p>닥터 스트레인지: 대혼돈의 멀티버스 (126분)&nbsp;&nbsp;<a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=182016"><span>[영화정보]</span></a></p>
             <p>
               개봉 | 220504<br>
               감독 | 샘 레이미<br>
