--- a/Theater-2.html
+++ b/Theater-2.html
@@ -42,7 +42,7 @@
         <img src="image/movietime2.jpg" alt="theater2"><br>
           <div class="text">
             <p>상영예정작 [2부] / 상영시간 | 평일 22:25 / 주말 22:25</p>
-            <p>범죄도시2 (106분) <a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=192608"><span>[영화정보]</span></a></p>
+            <p>범죄도시2 (106분)&nbsp;&nbsp;<a href="https://movie.naver.com/movie/bi/mi/basic.naver?code=192608"><span>[영화정보]</span></a></p>
             <p>
               개봉 | 220518<br>
               감독 | 이상용<br>
