--- a/Theater.html
+++ b/Theater.html
@@ -40,7 +40,7 @@
     <section>
       <div class="section_theater">
         <h1>자동차 극장</h1>
-        <p>퍼스트가든 자동차극장은 2019년 12월에 문을 열어 <br>깔끔한 주변 시설과 함께 쾌적환 영화감상을 위한 5.1채널 돌비 <br>스테레오를 지원하는 20,000 ANSI 급의 고화질 디지털 영사기를 <br>보유하고 있으며 특히, 야외에서 관람해야하는 영화관 특성에 맞추어 특수 고반사 도료로스크린을 만들어 더욱더 깨끗한 화면과<br> 현장감있는 음질을 즐길 수 있습니다.</p>
+        <p>퍼스트가든 자동차극장은 2019년 12월에 문을 열어 깔끔한 주변 시설과 함께 쾌적환 영화감상을 위한 5.1채널 돌비 스테레오를 지원하는 20,000 ANSI 급의 고화질 디지털 영사기를 보유하고 있으며 특히, 야외에서 관람해야하는 영화관 특성에 맞추어 특수 고반사 도료로스크린을 만들어 더욱더 깨끗한 화면과 현장감있는 음질을 즐길 수 있습니다.</p>
 
         <table>
           <tr>
