--- a/Wedding&party.html
+++ b/Wedding&party.html
@@ -47,25 +47,25 @@
             <img src="image/wedding1.jpg" alt="wedding">
             <img src="image/wedding_g.png" alt="wedding" class="gaudium">
             <p>유럽풍, 이국적인 분위기속 로맨틱한 time</p>
-            <h2>향긋한 꽃내음과 은하수 별빛아래 진행되는 아름다운<br> 예식을 찾아와주신 하객들과 함께 저희 퍼스트가든에서<br> 행복한 추억을 만들어보세요.</h2>
+            <h2>향긋한 꽃내음과 은하수 별빛아래 진행되는 아름다운 예식을 찾아와주신 하객들과 함께 저희 퍼스트가든에서 행복한 추억을 만들어보세요.</h2>
           </li>
           <li>
             <img src="image/wedding2.png" alt="wedding">
             <p>도심 속 싱그러운 숲속 wedding</p>
-            <h2>하얀 백지를 도화지 삼아 담아낸 따사로운 햇살과<br> 푸른 잔디밭, 청량한 하늘아래 앞으로의<br> 꽃길을 걸어가는 신랑신부님.<br> 퍼스트가든에서는 영화 속 한장면의 연출이
+            <h2>하얀 백지를 도화지 삼아 담아낸 따사로운 햇살과 푸른 잔디밭, 청량한 하늘아래 앞으로의 꽃길을 걸어가는 신랑신부님. 퍼스트가든에서는 영화 속 한장면의 연출이
               가능합니다.</h2>
           </li>
           <li>
             <img src="image/wedding3.png" alt="wedding">
             <p>프라이빗한 웨딩의 정석 단독홀과 여유로운 예식간격</p>
-            <h2>약 500평의 넓은 부지를 단독 대관하여<br> 프라이빗한
-              웨딩은 물론 여유로운 예식간격으로<br> 인하여 인생의
+            <h2>약 500평의 넓은 부지를 단독 대관하여 프라이빗한
+              웨딩은 물론 여유로운 예식간격으로 인하여 인생의
               아름다운 순간을 최고의 기억으로 남겨드립니다.</h2>
           </li>
           <li>
             <img src="image/wedding4.jpg" alt="wedding">
             <p>전문가들의 섬세한 손길로 최상의 서비스 선사</p>
-            <h2>최고의 플라워팀, 최고의 셰프팀과, 최고의 웨딩<br> 디렉터팀으로만 구성하여 취향에 맞춰 기획부터 진행까지<br> 당신만의 특별한 웨딩을 퍼스트가든에서 선물합니다.</h2>
+            <h2>최고의 플라워팀, 최고의 셰프팀과, 최고의 웨딩 디렉터팀으로만 구성하여 취향에 맞춰 기획부터 진행까지 당신만의 특별한 웨딩을 퍼스트가든에서 선물합니다.</h2>
           </li>
         </ul>
 
