--- a/map.html
+++ b/map.html
@@ -50,11 +50,11 @@
             <th>연락처</th><td>031-957-6861</td>
           </tr>
           <tr>
-            <th>지하철 이용시</th><td>3호선 백석역 6번출구 앞 버스정류장(20-335)에서 90번 탑승 → 박애원(20-386) 하차 3호선 마두역 하차후 중앙버스정류장(20-249) → 90번 탑승 → 박애원(20-386) 하차
+            <th>지하철<br>이용시</th><td>3호선 백석역 6번출구 앞 버스정류장(20-335)에서 90번 탑승 → 박애원(20-386) 하차 3호선 마두역 하차후 중앙버스정류장(20-249) → 90번 탑승 → 박애원(20-386) 하차
               경의중앙선 운정역 하차(2번출구) 좌측 약 160M 운정역 정류장 → 088번 마을버스 탑승(봉일천 방향, 30-221번 정류장) → 퍼스트가든 하차</td>
           </tr>
           <tr>
-            <th>버스 이용시</th><td>- 일반버스 : 3번, 90번<br>
+            <th>버스<br>이용시</th><td>- 일반버스 : 3번, 90번<br>
               - 하차 정류장 : 박애원(정류장 번호 20-387, 20-386)<br>
               <div class="red">
                 - 마을버스 : 088번<br>
@@ -63,7 +63,7 @@
               088 마을버스는 배차시간이 평일기준 30~40분으로, 운행정보를 꼭 확인하시기 바랍니다.</td>
           </tr>
           <tr>
-            <th>자가용 이용시</th><td>내비게이션에 "퍼스트가든" 검색<br>
+            <th>자가용<br>이용시</th><td>내비게이션에 "퍼스트가든" 검색<br>
               조리읍사무소 방향:<br>
               조리읍사무소에서 좌측 방향으로 직진 약350m -> 우회전 고봉로 직진 약2.3km -> GS칼텍스 위치에서 우회전 후 박애원 지나서 우회전 후 약 600m<br>
               일산 방향:<br>
