--- a/dining.html
+++ b/dining.html
@@ -44,23 +44,23 @@
           <li>
             <h2>삐아또 고메(Piatto Gourmet)</h2>
             <img src="image/dinning1.jpg" alt="dining">
-            <p>가든뷰와 함께 식사를 즐길 수 있는<br> 퍼스트가든의 스테이크 하우스, 삐아또 고메에서는<br> 매일 엄선한 재료로 최고의 식사를 선보입니다.</p>
+            <p>가든뷰와 함께 식사를 즐길 수 있는 퍼스트가든의 스테이크 하우스, 삐아또 고메에서는 매일 엄선한 재료로 최고의 식사를 선보입니다.</p>
           </li>
           <li>
             <h2>시선(視膳)</h2>
             <img src="image/dinning2.jpg" alt="dining">
-            <p>'맛을 살피는 정성이 있습니다.'<br> 퍼스트가든의 한식 레스토랑 시선(視膳)은<br> 정갈한 재료와 정성으로 맛을 살핀다는 뜻을 담고 있습니다.</p>
+            <p>'맛을 살피는 정성이 있습니다.'<br> 퍼스트가든의 한식 레스토랑 시선(視膳)은 정갈한 재료와 정성으로 맛을 살핀다는 뜻을 담고 있습니다.</p>
           </li>
           <li>
             <h2>보스코&피안트</h2>
             <img src="image/dinning3.jpg" alt="dining">
-            <p>퍼스트가든에서 가장 전망이 높고 좋은<br> 포레스트가든에 위치하고 있는 보스코(BOSCO)&피안트(PIANTE)는 커피를 비롯해 케익, 주스, 차 등 다양한 디저트와 소중한 사람들과의 시간을 더욱 아름답게 간직하게 합니다.</p>
+            <p>퍼스트가든에서 가장 전망이 높고 좋은 포레스트가든에 위치하고 있는 보스코(BOSCO)&피안트(PIANTE)는 커피를 비롯해 케익, 주스, 차 등 다양한 디저트와 소중한 사람들과의 시간을 더욱 아름답게 간직하게 합니다.</p>
           </li>
           <li>
             <h2>방갈로 BBQ</h2>
             <img src="image/dinning4.jpg" alt="dining">
             <p><span>정원에서 즐기는 바베큐 파티</span>
-              아름다운 정원이 한 눈에 내려다 보이는 편안한 방갈로에서<br> 바베큐를 먹고, 정원을 거닐며 여유로운 시간을 보내세요.<br> 시원한 야외그늘에서 직접 구워먹는<br> 셀프 비비큐를 맛보며 즐거운 추억을 만드세요</p>
+              아름다운 정원이 한 눈에 내려다 보이는 편안한 방갈로에서 바베큐를 먹고, 정원을 거닐며 여유로운 시간을 보내세요. 시원한 야외그늘에서 직접 구워먹는 셀프 비비큐를 맛보며 즐거운 추억을 만드세요</p>
           </li>
         </ul>
       </div>
